geneever/style.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}


/*Text antialiasing*/
* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* HTML5 display-role reset for older browsers */
/* article, aside, details, figcaption, figure, */
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1.5;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

body {
  font-family: 'Open Sans', sans-serif;
}

a {
  color:#323232;
  text-decoration: none;
}

h1 {font-size:40px; font-weight:700;}
h2 {font-size:35px; font-weight:300;}
h3 {font-size:25px;}

p {font-size:20px; font-weight:400;}


/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (max-width: 600px) {
  /* .top-bar {
    flex-direction: column;
    flex-wrap:wrap;
    align-content: center;
    justify-content:center;
    height:10em;
  } */

  .top-bar .nav-bar {
    padding-top:15px;
  }
}

#learn-more {
  /*border:2px solid DodgerBlue;*/
  border-radius:20px;
  padding:10px;

  background-color:DodgerBlue;
  /*background-color:#ed7d31;*/
  color:white;
}

#learn-more:hover, .fiftyfifty a:hover {
  /* color: #f2f5f7; */
  background-color:rgb(58, 119, 180);
  transition: all ease-in-out 200ms;
}

.section-one {
  /* min-height:50vh;
   */
   display:flex;
   /* justify-content: space-evenly; */
   flex-wrap:wrap;
}

/* Standard logo Size - 200px's */
.logo {
  width:200px;
}

#text {
  flex:1;
  display:flex;
  flex-direction: column;
  flex-shrink:0;

  height:24rem;
  background-color:red;
  min-width:24rem;
}


#image {
  /* height:100%; */
  flex:1;
  display:flex;
  justify-content: center;
  align-items: center;

  height:24rem;
  background-color:blue;
  min-width:24rem;
}














nav {
  height: 7rem;
  background: #5b78c7;

  display:flex;
  justify-content:space-evenly;
  align-content: center;
}

.nav-links {
  display: flex;
  list-style: none;
  /* width: 50%; */
  height: 100%;
  justify-content: space-around;
  align-items: center;
  /* margin-left: auto; */
}

.logo {
  display:flex;
  align-items:center;
}

.nav-links li a {
  color: white;
  text-decoration: none;
  font-size: 20px;
  margin:1em;
}

.landing {
  height: 90vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.landing h1 {
  margin: 100px;
  font-size: 50px;
  color: #ae5fce;
}

.hamburger div{
  width: 30px;
  height:3px;
  background: #f2f5f7;
  margin: 5px;
  transition: all 0.3s ease;
}

.hamburger {display:none;}

@media screen and (max-width: 768px) {
  .line {
    width: 30px;
    height: 3px;
    background: white;
    margin: 5px;
  }

  nav {
    position: relative;
  }

  .hamburger {
    display:block;
    position: absolute;
    cursor: pointer;
    right: 5%;
    top: 50%;
    transform: translate(-5%, -50%);
    z-index: 2;
  }

  .nav-links {
    position: fixed;
    background: #5b78c7;
    height: 100vh;
    width: 100%;
    flex-direction: column;
    clip-path: circle(100px at 90% -10%);
    /* -webkit-clip-path: circle(100px at 90% -10%); */
    transition: all 1s ease-out;
    pointer-events: none;
  }
  .nav-links.open {
    clip-path: circle(100vh at 50% 100%);
    -webkit-clip-path: circle(100vh at 50% 100%);
    pointer-events: all;
  }
  .landing {
    flex-direction: column;
  }
  .nav-links li {
    opacity: 0;
  }
  .nav-links li a {
    font-size: 25px;
  }
  .nav-links li:nth-child(1) {
    transition: all 0.5s ease 0.2s;
  }
  .nav-links li:nth-child(2) {
    transition: all 0.5s ease 0.4s;
  }
  .nav-links li:nth-child(3) {
    transition: all 0.5s ease 0.6s;
  }
  li.fade {
    opacity: 1;
  }
  .toggle .line1{
    transform: rotate(-45deg) translate(-5px,6px);
  }
  .toggle .line2{
    transition: all 0.7s ease;
    width:0;
  }
  .toggle .line3{
    transform: rotate(45deg) translate(-5px,-6px);
  }
}

